--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,37 +1,69 @@
 .card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background: var(--dark-blue);
-    max-width: 40rem;
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: start;
+  gap: 1rem;
+  background: var(--dark-blue);
+  max-width: 27rem;
+  margin: 0;
+  padding: 2rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 
-    border-radius: 10px;
-    color: var(--medium-grey);
+  border-radius: 10px;
+  color: var(--light-grey);
 }
 
 .card h1 {
-    color: var(--white);
+  color: var(--white);
+  align-self: flex-start;
 }
 
+.card p {
+    margin-bottom: 1rem;
+}
+
+.icon {
+    align-self: flex-start;
+    background-color: var(--darker-blue);
+    border-radius: 50%;
+    width: 3rem;
+    height: 3rem;
+    line-height: 3rem;
+    text-align: center;
+    font-size: 2rem;
+    margin-bottom: 1rem;
+  }
+
 .ratings {
-    list-style-type: none;
-    display: flex;
-    color: var(--medium-grey);
+  list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  color: var(--light-grey);
+  margin-bottom: 1rem;
+}
+
+.ratings li {
+  background-color: var(--darker-blue);
+  border-radius: 50%;
+  width: 3rem;
+  height: 3rem;
+  line-height: 3rem;
+  text-align: center;
 }
 
 .button {
-    background-color: var(--primary);
-    color: var(--white);
-    width: 90%;
-    border: 0;
-    border-radius: 10px;
-    height: 3rem;
-    text-transform: uppercase;
-    letter-spacing: 3px;
+  background-color: var(--primary);
+  color: var(--white);
+  width: 100%;
+  border: 0;
+  border-radius: 10px;
+  height: 3rem;
+  text-transform: uppercase;
+  letter-spacing: 3px;
 }
