adds medium-blue color

--- a/src/global.css
+++ b/src/global.css
@@ -3,6 +3,7 @@
     --primary: #fb7413;
     --light-grey: #959eac;
     --medium-grey: #7c8798;
+    --medium-blue: #252c34;
     --dark-blue: #252d37;
     --darker-blue: #121417;
   }
