--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,7 +4,7 @@
   align-items: center;
   text-align: start;
   gap: 1rem;
-  background: var(--dark-blue);
+  background: var(--blue3);
   max-width: 27rem;
   margin: 0;
   padding: 2rem;
@@ -14,8 +14,9 @@
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 
-  border-radius: 10px;
-  color: var(--light-grey);
+  border-radius: 30px;
+  color: var(--grey1);
+  background-image: linear-gradient(to bottom right, var(--blue2), var(--blue3));
 }
 
 .card h1 {
@@ -25,11 +26,12 @@
 
 .card p {
     margin-bottom: 1rem;
+    line-height: 1.6;
 }
 
 .icon {
     align-self: flex-start;
-    background-color: var(--darker-blue);
+    background-color: var(--blue1);
     border-radius: 50%;
     width: 3rem;
     height: 3rem;
@@ -44,12 +46,12 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  color: var(--light-grey);
+  color: var(--grey1);
   margin-bottom: 1rem;
 }
 
 .ratings li {
-  background-color: var(--darker-blue);
+  background-color: var(--blue1);
   border-radius: 50%;
   width: 3.5rem;
   height: 3.5rem;
