--- a/src/global.css
+++ b/src/global.css
@@ -1,11 +1,12 @@
 :root {
     --white: #fff;
     --primary: #fb7413;
-    --light-grey: #959eac;
-    --medium-grey: #7c8798;
-    --medium-blue: #252c34;
-    --dark-blue: #252d37;
-    --darker-blue: #121417;
+    --grey1: #959eac;
+    --grey2: #7c8798;
+    --blue1: #303942;
+    --blue2: #252c34;
+    --blue3: #252d37;
+    --blue4: #121417;
   }
   
   * {
@@ -15,7 +16,7 @@
   }
   
   body {
-      background: var(--darker-blue);
+      background: var(--blue4);
       -webkit-font-smoothing: antialiased;
   }
   
