--- a/src/App.module.css
+++ b/src/App.module.css
@@ -16,7 +16,11 @@
 
   border-radius: 30px;
   color: var(--grey1);
-  background-image: linear-gradient(to bottom right, var(--blue2), var(--blue3));
+  background-image: linear-gradient(
+    to bottom right,
+    var(--blue2),
+    var(--blue3)
+  );
 }
 
 .card h1 {
@@ -25,21 +29,21 @@
 }
 
 .card p {
-    margin-bottom: 1rem;
-    line-height: 1.6;
+  margin-bottom: 1rem;
+  line-height: 1.6;
 }
 
 .icon {
-    align-self: flex-start;
-    background-color: var(--blue1);
-    border-radius: 50%;
-    width: 3rem;
-    height: 3rem;
-    line-height: 3rem;
-    text-align: center;
-    font-size: 2rem;
-    margin-bottom: 1rem;
-  }
+  align-self: flex-start;
+  background-color: var(--blue1);
+  border-radius: 50%;
+  width: 3rem;
+  height: 3rem;
+  line-height: 3rem;
+  text-align: center;
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
 
 .ratings {
   list-style-type: none;
@@ -59,6 +63,13 @@
   text-align: center;
 }
 
+.ratings li:hover {
+  background-color: var(--primary);
+  color: var(--white);
+  transition: 0.3s;
+  cursor: pointer;
+}
+
 .button {
   background-color: var(--primary);
   color: var(--white);
@@ -68,4 +79,11 @@
   height: 3rem;
   text-transform: uppercase;
   letter-spacing: 3px;
+}
+
+.button:hover {
+  background: var(--white);
+  color: var(--primary);
+  transition: 0.3s;
+  cursor: pointer;
 }
